// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartItem Tests renders the CartItem component 1`] = `
Object {
  "children": Array [
    <div
      className="sc-bYMpWt bnFYVZ"
    >
      <picture>
        <source
          srcSet="./assets/img/pizza6.webp"
          type="image/webp"
        />
        <source
          srcSet="./assets/img/pizza6.png"
          type="image/png"
        />
        <img
          alt="Cheesburger Pizza pizza"
          height="80"
          src="./assets/img/pizza6.png"
          width="80"
        />
      </picture>
    </div>,
    <section
      className="sc-kMjNwy gJsxfE"
    >
      <h3>
        Cheesburger Pizza
      </h3>
      <p>
        thin
         dough, 
        14
         inch
      </p>
    </section>,
    <section
      className="sc-ilhmMj fPuPTA"
    >
      <button
        aria-label="minus"
        className="sc-hLBbgP sc-iBYQkv sc-ftTHYK fGqcTx iDltE YugEl"
        disabled={false}
        onClick={[Function]}
      >
        <svg
          className="sc-jIRcFI kihpWA"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 8a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z"
          />
        </svg>
      </button>
      <span>
        13
      </span>
      <button
        aria-label="plus"
        className="sc-hLBbgP sc-iBYQkv sc-ftTHYK fGqcTx iDltE YugEl"
        onClick={[Function]}
      >
        <svg
          className="sc-jIRcFI kihpWA"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"
          />
        </svg>
      </button>
    </section>,
    <h3
      className="sc-hhOBVt kgouOf"
    >
      91
      $
    </h3>,
    <div
      className="sc-gYbzsP kNflxz"
    >
      <button
        aria-label="delete"
        className="sc-hLBbgP sc-iBYQkv sc-ftTHYK fGqcTx iDltE kTqzjG"
        onClick={[Function]}
      >
        <svg
          className="sc-jIRcFI kihpWA"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"
          />
        </svg>
      </button>
    </div>,
  ],
  "props": Object {
    "className": "sc-ezOQGI bqqjuW",
  },
  "type": "article",
}
`;

exports[`CartItem Tests renders the CartItem component with a disabled button 1`] = `
Object {
  "children": Array [
    <div
      className="sc-bYMpWt bnFYVZ"
    >
      <picture>
        <source
          srcSet="./assets/img/pizza2.webp"
          type="image/webp"
        />
        <source
          srcSet="./assets/img/pizza2.png"
          type="image/png"
        />
        <img
          alt="Pepperoni Pizza pizza"
          height="80"
          src="./assets/img/pizza2.png"
          width="80"
        />
      </picture>
    </div>,
    <section
      className="sc-kMjNwy gJsxfE"
    >
      <h3>
        Pepperoni Pizza
      </h3>
      <p>
        traditional
         dough, 
        16
         inch
      </p>
    </section>,
    <section
      className="sc-ilhmMj fPuPTA"
    >
      <button
        aria-label="minus"
        className="sc-hLBbgP sc-iBYQkv sc-ftTHYK fGqcTx iDltE YugEl"
        disabled={true}
        onClick={[Function]}
      >
        <svg
          className="sc-jIRcFI kihpWA"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 8a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z"
          />
        </svg>
      </button>
      <span>
        1
      </span>
      <button
        aria-label="plus"
        className="sc-hLBbgP sc-iBYQkv sc-ftTHYK fGqcTx iDltE YugEl"
        onClick={[Function]}
      >
        <svg
          className="sc-jIRcFI kihpWA"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"
          />
        </svg>
      </button>
    </section>,
    <h3
      className="sc-hhOBVt kgouOf"
    >
      9
      $
    </h3>,
    <div
      className="sc-gYbzsP kNflxz"
    >
      <button
        aria-label="delete"
        className="sc-hLBbgP sc-iBYQkv sc-ftTHYK fGqcTx iDltE kTqzjG"
        onClick={[Function]}
      >
        <svg
          className="sc-jIRcFI kihpWA"
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"
          />
        </svg>
      </button>
    </div>,
  ],
  "props": Object {
    "className": "sc-ezOQGI bqqjuW",
  },
  "type": "article",
}
`;
